--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Movie Application</string>
+    <string name="genre">genre</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="year_of_release">year of Release</string>
+    <string name="duration">duration</string>
+    <string name="horrors">Horrors</string>
+    <string name="thrillers">Thrillers</string>
+    <string name="comedies">Comedies</string>
+    <string name="serials">Serials</string>
 </resources>
