--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -6,8 +6,8 @@
     <string name="description">описание</string>
     <string name="year_of_release">год выпуска</string>
     <string name="duration">длительность</string>
-    <string name="horrors">ужасы</string>
-    <string name="thrillers">триллеры</string>
-    <string name="comedies">комедии</string>
-    <string name="serials">сериалы</string>
+    <string name="horrors">Ужасы</string>
+    <string name="thrillers">Триллеры</string>
+    <string name="comedies">Комедии</string>
+    <string name="serials">Сериалы</string>
 </resources>
