--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -10,4 +10,5 @@
     <string name="thrillers">Триллеры</string>
     <string name="comedies">Комедии</string>
     <string name="serials">Сериалы</string>
+    <string name="movie_poster">Плакат фильма</string>
 </resources>
