--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="thrillers">Thrillers</string>
     <string name="comedies">Comedies</string>
     <string name="serials">Serials</string>
+    <string name="movie_poster">Movie Poster</string>
 </resources>
