--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -11,4 +11,13 @@
     <string name="comedies">Комедии</string>
     <string name="serials">Сериалы</string>
     <string name="movie_poster">Плакат фильма</string>
+    <string name="add_recycler">Добавить песайклервью</string>
+    <string name="error">Ошибка</string>
+    <string name="loading">Загрузка</string>
+    <string name="sucess">Успех</string>
+    <string name="search">Поиск</string>
+    <string name="add">Добавить</string>
+    <string name="delete">Удалить</string>
+    <string name="reload">Перезагрузить</string>
+    <string name="add_to_favourite">Добавить в избранное</string>
 </resources>
