--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,13 @@
     <string name="comedies">Comedies</string>
     <string name="serials">Serials</string>
     <string name="movie_poster">Movie Poster</string>
+    <string name="add_recycler">//Add recyclerView</string>
+    <string name="error">Error</string>
+    <string name="loading">Loading</string>
+    <string name="sucess">Success</string>
+    <string name="search">Search</string>
+    <string name="add">Add</string>
+    <string name="delete">Delete</string>
+    <string name="reload">reload</string>
+    <string name="add_to_favourite">add to favourite</string>
 </resources>
