--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="horrors">Horrors</string>
     <string name="thrillers">Thrillers</string>
     <string name="comedies">Comedies</string>
-    <string name="serials">Serials</string>
+    <string name="fantastic">Fantastic</string>
     <string name="movie_poster">Movie Poster</string>
     <string name="add_recycler">//Add recyclerView</string>
     <string name="error">Error</string>
