--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -9,7 +9,7 @@
     <string name="horrors">Ужасы</string>
     <string name="thrillers">Триллеры</string>
     <string name="comedies">Комедии</string>
-    <string name="serials">Сериалы</string>
+    <string name="fantastic">Фантастика</string>
     <string name="movie_poster">Плакат фильма</string>
     <string name="add_recycler">Добавить песайклервью</string>
     <string name="error">Ошибка</string>
