--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
     <string name="reload">reload</string>
     <string name="add_to_favourite">add to favourite</string>
     <string name="service_button">Service Button</string>
+    <string name="settings">Settings</string>
+    <string name="adult">Adult</string>
+    <string name="is_adult">Is Adult</string>
+    <string name="on">ON</string>
+    <string name="off">OFF</string>
 </resources>
