--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -11,7 +11,7 @@
     <string name="comedies">Комедии</string>
     <string name="fantastic">Фантастика</string>
     <string name="movie_poster">Плакат фильма</string>
-    <string name="add_recycler">Добавить песайклервью</string>
+    <string name="add_recycler">Добавить ресайклервью</string>
     <string name="error">Ошибка</string>
     <string name="loading">Загрузка</string>
     <string name="sucess">Успех</string>
@@ -26,4 +26,6 @@
     <string name="off">выкл</string>
     <string name="adult">Для взрослых</string>
     <string name="is_adult">взрослые</string>
+    <string name="content_provider">Контент провайдер</string>
+    <string name="Adult">Для взрослых</string>
 </resources>
