--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -28,4 +28,6 @@
     <string name="is_adult">взрослые</string>
     <string name="content_provider">Контент провайдер</string>
     <string name="Adult">Для взрослых</string>
+    <string name="need_permission_to_find_location">Необходимо разрешение для определения местоположения</string>
+    <string name="looks_like_location_disabled">Возможно, выключена геолокация</string>
 </resources>
